# AutoDine-Smart-Restaurant-Table-to-Kitchen-Coordination-Platform-using-IoT

./: .gitignore  README.md  USER_MANUAL.md
AutoDine_Host/: CMakeLists.txt  sdkconfig.defaults
AutoDine_Host/main/: CMakeLists.txt  app_config.h  buzzer.c  buzzer.h  http_server.c  main.c  order_manager.c  order_manager.h  wifi_ap.c
AutoDine_Host/main/web/: app.js  index.html  style.css
AutoDine_Table/: CMakeLists.txt  sdkconfig.defaults
AutoDine_Table/main/: CMakeLists.txt  app_config.h  hardware.c  hardware.h  main.c  menu_data.h  network.c  network.h  state_machine.c  state_machine.h  ui_display.c  ui_display.h
AutoDine_Table_Ino/: AutoDine_Table_Ino.ino  app_config.h  autodine_net.cpp  autodine_net.h  cart.c  cart.h  hardware_compat.h  state_machine.c  state_machine.h  touch.h  ui_screens.c  ui_screens.h
AutoDine_Waiter/: main.ino
Resources/: AutoDine.docx  workflow.docx  ~$rkflow.docx
Resources/mypaper/: AutoDine.docx
Resources/mypaper/sample_project/main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
Restaurant_Host/: CMakeLists.txt
Restaurant_Host/main/: CMakeLists.txt  main.c
Restaurant_Menu/: CMakeLists.txt
Restaurant_Menu/main/: CMakeLists.txt  Kconfig.projbuild  main.c
server/: .env  autodine.db  requirements.txt  routes.txt  server.py
server/templates/: chef.html  login.html  owner.html
